--- a/.github/workflows/TestAutomation.yml
+++ b/.github/workflows/TestAutomation.yml
@@ -14,16 +14,19 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: apt install python3 pipenv -y
-        run: pipenv install fastapi uvicorn pytest requests
+        run: |
+          sudo apt update
+          sudo apt install -y python3 pipenv
+          pipenv install fastapi uvicorn pytest requests
 
       - name: Start FastAPI server
-        run: pipenv run python3 apiserver.py &
+        run: |
+          pipenv run python3 apiserver.py &
         env:
           PYTHONUNBUFFERED: 1
 
       - name: Wait for server to be ready
-        run: sleep 5  # Wait to ensure the server is up
+        run: sleep 5  # Ensure the server is up before running tests
 
       - name: Run tests
         run: pipenv run pytest automation_test_pytest.py
